# ngmb

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
aqsol-pe/: architectures.py  dataloading.py  train.py
notebooks/: accuracy_comparison.ipynb  full_results_ga.ipynb  smoothing.ipynb  variance.ipynb
results-pe/: run-1.csv  run-2.csv  run-3.csv  run-4.csv  run-5.csv  run-6.csv  run-7.csv
results/run-0/: aqsol.csv  corafull.csv  er.csv  ogbn-arxiv.csv  pcqm4mv2.csv
results/run-1/: aqsol.csv  corafull.csv  er.csv  ogbn-arxiv.csv  pcqm4mv2.csv
results/run-2/: aqsol.csv  corafull.csv  er.csv  ogbn-arxiv.csv  pcqm4mv2.csv
results/run-3/: aqsol.csv  corafull.csv  er.csv  ogbn-arxiv.csv  pcqm4mv2.csv
results/run-4/: aqsol.csv  corafull.csv  er.csv  ogbn-arxiv.csv  pcqm4mv2.csv
results/run-5/: aqsol.csv  corafull.csv  er.csv  ogbn-arxiv.csv  pcqm4mv2.csv
results/run-6/: aqsol.csv  corafull.csv  er.csv  ogbn-arxiv.csv  pcqm4mv2.csv
results/run-7/: aqsol.csv  corafull.csv  er.csv  ogbn-arxiv.csv  pcqm4mv2.csv
scripts/: all-train.sh  all_train.py  array-laplacian.sh  array-train.sh  cpu.sh  generate-datasets.sh  gpu.sh  jupyter.sh  mlflow.sh  sbatch-train-siamese-gm.sbatch  sbatch-transformer.sbatch  train-siamese-gm.sh
src/ngmb/: __init__.py  _core.py
src/ngmb/chem/: __init__.py  _chem.py
src/ngmb/graph_matching/: __init__.py  _dataset.py
src/ngmb/graph_matching/_scripts/: data_stats.py  generate_aqsol.py  generate_cora_full.py  generate_erdos_renyi.py  generate_karate_club.py  generate_ogbn_arxiv.py  generate_pcqm4mv2.py  laplacian_performances.py  train.py
src/ngmb/graph_matching/_train/: training.py  utils.py
src/ngmb/models/: __init__.py  _gat.py  _gated_gcn.py  _gatv2.py  _gcn.py  _gin.py  _laplacian.py  _wl_continuous.py
src/ngmb/random/: __init__.py  _random.py
src/ngmb/visualization/: __init__.py  _visualization.py
