[project]
name = "ngmb"
version = "0.1.0"
description = "The ngmb (Noisy Graph Matching Benchmark) package simplifies benchmarking GNNs on the graph alignement task (graph matching) with correlated pairs of graphs."
dependencies = [
    "click>=8.1.7",
    "graphviz>=0.20.3",
    "matplotlib>=3.9.2",
    "lightning>=2.4.0",
    "ogb>=1.3.6",
    "rdkit>=2024.3.5",
    "safetensors>=0.4.5",
    "scipy>=1.14.1",
    "torch>=2.4.1",
    "torch-geometric>=2.6.0",
    "wandb>=0.18.1",
    "mlflow>=2.16.2",
    "seaborn>=0.13.2",
]
    
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
gm-generate-er = "ngmb.graph_matching._scripts.generate_erdos_renyi:main"
gm-generate-aqsol = "ngmb.graph_matching._scripts.generate_aqsol:main"
gm-generate-karateclub = "ngmb.graph_matching._scripts.generate_karate_club:main"
gm-generate-corafull = "ngmb.graph_matching._scripts.generate_cora_full:main"
gm-generate-ogbn-arxiv = "ngmb.graph_matching._scripts.generate_ogbn_arxiv:main"
gm-generate-pcqm4mv2 = "ngmb.graph_matching._scripts.generate_pcqm4mv2:main"

gm-data-stats = "ngmb.graph_matching._scripts.data_stats:main"

gm-train = "ngmb.graph_matching._scripts.train:main"
gm-laplacian-performances = "ngmb.graph_matching._scripts.laplacian_performances:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.3.5",
    "ipython>=8.22.2",
    "ipykernel>=6.29.4",
    "notebook>=7.2.1",
]

[tool.hatch.metadata]
allow-direct-references = false

[tool.hatch.build.targets.wheel]
packages = ["src/ngmb"]
